<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="invalid_percentage">Only values from 0 to 100 are allowed</string>
    <string name="invalid_field">Please review this field</string>
    <string name="formatting_error">Formatting error</string>
    <string name="invalid_possitive">Only positive numbers are allowed</string>
    <string name="invalid_phone_number">This is not a valid phone number</string>
    <string name="invalid_email">This is not a valid email</string>
    <string name="invalid_negative_number">Only negative numbers are allowed</string>
    <string name="invalid_possitive_zero">Only positive numbers or zero allowed</string>
    <string name="invalid_interval">Only values from 0 to 1 are allowed</string>
    <string name="validation_url">This is not a valid url</string>
    <string name="invalid_integer">Value must be an integer</string>
    <string name="wrong_pattern">It is not a correct format.</string>
    <string name="pattern_error">The configured pattern %s is wrong.</string>
    <string name="update_field_error">This field could not be updated. Please try again</string>
    <string name="error">Error</string>
    <string name="unique_warning">The value should be unique, a coincidence has been found. It has not been saved. Please check it.</string>
    <string name="select_time">Select time</string>
    <string name="choose_date">Choose date</string>
    <string name="choose_ou">Choose organisation unit</string>
    <string name="lorem" translatable="false">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat</string>
    <string name="conf_error_value_to_assign_option_set">Program rule %s is trying to assign value %s which does not belongs to option set %s</string>
    <string name="conf_error_value_option_set">Value for field %s does not belong to the option set in %s</string>
    <string name="field_is_mandatory">This field is mandatory</string>
    <string name="required">Required</string>
    <string name="date">Date</string>
    <string name="hint_year">Years</string>
    <string name="hint_month">Months</string>
    <string name="hint_day">Days</string>
    <string name="wrong_date_format">%s can\'t be parsed as a date</string>
    <string name="polygon">Polygon</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="coordinates_error">Coordinates values are not valid</string>
    <string name="polygon_captured">Polygon captured</string>
    <string name="enter_value">Enter value</string>
    <string name="enter_url">Enter url</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_positive_integer_or_zero">Enter positive integer or zero</string>
    <string name="enter_negative_integer">Enter negative integer</string>
    <string name="enter_positive_integer">Enter positive integer</string>
    <string name="enter_number">Enter number</string>
    <string name="enter_percentage">Enter percentage</string>
    <string name="enter_unit_interval">Enter number from 0 to 1</string>
    <string name="enter_letter">Enter letter</string>
    <string name="enter_long_text">Enter long text</string>
    <string name="enter_text">Enter text</string>
    <string name="due_date">Due date</string>
    <string name="mandatory_field">Mandatory field</string>
    <string name="form_latitude_prefix">Lat:</string>
    <string name="form_longitude_prefix">Long:</string>
    <string name="not_saved">Not saved</string>
    <string name="review">Review</string>
    <string name="complete">Complete</string>
    <string name="discard_changes">Discard changes</string>
    <string name="saved">Saved!</string>
    <string name="review_message">Some fields need your attention.\nDo you want to review the form?</string>
    <string name="not_now">Not now</string>
    <string name="keep_editing">Keep editing</string>
    <string name="discard_go_back">If you exit now all the information in the form will be discarded.</string>
    <string name="field_errors_not_saved_discard">Some fields have errors and they are not saved. \nIf you exit now the changes will be discarded.</string>
    <string name="field_errors_not_saved">Some fields have errors and they are not saved.</string>
    <string name="fields_mandatory_missing">Some mandatory fields are missing and the form cannot be saved.</string>
    <string name="fields_mandatory_missing_discard">Some mandatory fields are missing and the form cannot be saved. \nIf you exit now the changes will be discarded.</string>
    <string name="share">Share</string>
    <string name="camera_permission_denied">Camera permission is denied.\nYou need to enable it to use this feature.</string>
    <string name="action_close">Close</string>
    <string name="program_rules_loop_warning_title">Program rules warning</string>
    <string name="program_rules_loop_warning_message">There is a configuration issue causing a loop in the rules. Contact you administrator.</string>
    <string name="copied_text">Copied</string>
    <string name="empty_description">No info for this field</string>
    <string name="take_photo">Take Photo</string>
    <string name="from_gallery">Choose from gallery</string>
    <string name="warning_error_on_complete_title">Check this!</string>
    <string name="action_do_not_show_again">Do not show again</string>
    <string name="validation_error_message">the provided value is not allowed for this field</string>
    <string name="error_boolean_zero_is_not_false">Invalid character 0</string>
    <string name="error_boolean_one_is_not_true">Invalid character 1</string>
    <string name="error_boolean_malformed">Value is neither true or false</string>
    <string name="error_date_parsing">This date format is not valid</string>
    <string name="error_date_time_parsing">This date and time format is not valid</string>
    <string name="error_time_parsing">This time format is not valid</string>
    <string name="error_letter_empty">The value is empty</string>
    <string name="error_letter_more_than_one">The value contains more than one letter</string>
    <string name="error_letter_not_a_letter">The value is not a letter</string>
    <string name="error_text_too_long">The text is too long</string>
    <string name="error_true_only_malformed">Value is neither true or false</string>
    <string name="error_true_only_false_not_valid">This field can only be true</string>
    <string name="error_true_only_one_is_not_true">Invalid character 1</string>
    <string name="data_values_save_error">DataValues can\'t be saved using these arguments. Use the other one.</string>
    <string name="leading_zero_error">Leading zero numbers are not allowed</string>
    <string name="enrollment_single_section_label">Attributes - %s</string>
    <string name="tei_coordinates">Coordinates for the</string>
    <string name="no_reserved_values">There are no more reserved values. Contact your system administrator</string>
    <string name="incident_date">Incident date</string>
    <string name="location_permission_denied">The location permission is needed for capturing coordinates. Please, enable them in the application settings</string>
    <string name="open_with">Open with</string>
    <string name="no_option_found">No option found</string>
    <string name="download">Download</string>
    <string name="scan">Scan</string>
    <string name="qr_code">QR code</string>
    <string name="bar_code">Bar code</string>
    <string name="add_location">Add location</string>
    <string name="form_without_fields">This form has no fields configured</string>
    <string name="event_details_section_title">%s details</string>
    <string name="event_data_section_title">%s data</string>
    <string name="org_unit">Org unit</string>
    <string name="coordinates">Coordinates</string>
    <string name="category_combo">Category Combo</string>
    <string name="no_options">No options available</string>
    <string name="cat_combo">Cat combo</string>
    <string name="simprints_biometrics_form_title_status_readout">[Simprints Biometrics Status Readout]</string>
    <string name="simprints_biometrics_form_tei_uid">TEI UID:</string>
    <string name="simprints_biometrics_form_guid">Simprints GUID:</string>
    <string name="simprints_biometrics_form_program_uid">Program UID:</string>
    <string name="simprints_biometrics_form_project_id">Simprints Project ID:</string>
    <string name="simprints_biometrics_form_org_unit_uid">Org Unit UID:</string>
    <string name="simprints_biometrics_form_module_id">Simprints Module ID:</string>
    <string name="simprints_biometrics_form_user_id">User ID:</string>
    <string name="simprints_biometrics_form_match_threshold">Match Score Threshold, minimum:</string>
    <string name="simprints_biometrics_form_locking_timeout_minutes">Biometric Locking Timeout, minutes:</string>
    <string name="simprints_biometrics_form_latest_attempt_at">Latest biometrics attempt at:</string>
    <string name="simprints_biometrics_form_latest_success">Latest biometrics success:</string>
</resources>